--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -1,5 +1,12 @@
 {
   "scripts": {
     "test": "mocha"
+  },
+  "dependencies": {
+    "chai": "^5.1.0"
+  },
+  "devDependencies": {
+    "chai": "*",
+    "mocha": "*"
   }
 }
